@@ -56,6 +56,7 @@ Template for new versions:
 ## New Features
 
 ## Fixes
+- `preserve-rooms`: don't erroneously release reservations for units that have returned from their missions but have not yet entered the fort map
 
 ## Misc Improvements
 
